# smart-pokedex

./: caught.txt  data.json  pokedex.js  pokedex.py  pyproject.toml  uncaught.txt
chrome-extension/: background.js  contentScript.js  manifest.json  options.js  popup.html  popup.js
